# jupyter_app_launcher

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  conftest.py  jupyter-lite.json  overrides.json  package.json  pyproject.toml  readthedocs.yml  schema.js  setup.py  tsconfig.json
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml  deploy.yml
api/contents/: all.json
binder/: environment.yml  postBuild  start
binder/jupyter_app_launcher/: config.yaml  jp_app_launcher_config.yaml  st_app.py
consoles/: index.html
docs/: environment.yml
docs/source/: conf.py  develop-install.rst  index.rst  usage.rst
edit/: index.html
extensions/ipyflex/: package.json
extensions/jupyter-leaflet/: package.json
extensions/jupyter-vuetify/: package.json
extensions/jupyter_app_launcher/: install.json  package.json
files/: beam.json
jupyter_app_launcher/: __init__.py  _version.py  handler_factory_manager.py  handlers.py  script.py  utils.py
lab/: index.html
notebooks/: index.html
repl/: index.html
retro/consoles/: index.html
samples/: Notebook example.ipynb  beam.ipynb  beam.md  config.yaml  data.json  jp_app_launcher_config.yaml  jp_app_launcher_config_2.yaml  layout.json  sample.ipynb  sample.md  stock.ipynb  test-jupyter-app-launcher-ipylab.ipynb  ticker2.json
src/: app_tracker.ts  factory_manager.ts  handler.ts  index.ts  manager_plugin.ts  running_launcher_app.ts  schema.ts  token.ts  tools.ts
style/: base.css  index.css  index.js
tree/: index.html
ui-tests/: package.json
(+331 files in other folders)
